--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <!-- FAVICON -->
+        <link rel="icon" href="favicon.svg" />
+
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-
-        <title>Vite + React + TS</title>
+        <!-- TITLE -->
+        <title>Chef Kitchen</title>
     </head>
-    <body>
+
+    
+    <body class="selection:bg-[#FFA800]">
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
