--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 
     
-    <body class="selection:bg-[#FFA800]">
+    <body class="selection:bg-[#FFA800] selection:text-white">
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
